// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TileDelete renders a curved-tile element with default values 1`] = `
<body>
  <div>
    <path
      d="M 13.75,0 A 13.75,13.75 0 0 0 -13.75,0 A 13.75,13.75 0 0 0 13.75,0 Z M 4.440892098500626e-16,3.8890872965260113 L -4.861359120657513,8.750446417183525 -8.750446417183525,4.861359120657515 -3.8890872965260113,4.440892098500626e-16 -8.750446417183525,-4.861359120657513 -4.861359120657515,-8.750446417183525 -4.440892098500626e-16,-3.8890872965260113 4.861359120657513,-8.750446417183525 8.750446417183525,-4.861359120657515 3.8890872965260113,-4.440892098500626e-16 8.750446417183525,4.861359120657513 4.861359120657515,8.750446417183525 Z"
    />
    
  </div>
</body>
`;

exports[`TileDelete renders a curved-tile element with the given parameters 1`] = `
<body>
  <div>
    <path
      d="M 113.75,200 A 13.75,13.75 0 0 0 86.25,200 A 13.75,13.75 0 0 0 113.75,200 Z M 96.11091270347399,200 L 91.24955358281647,195.1386408793425 95.13864087934249,191.24955358281647 100,196.11091270347399 104.86135912065751,191.24955358281647 108.75044641718353,195.1386408793425 103.88908729652601,200 108.75044641718353,204.8613591206575 104.86135912065751,208.75044641718353 100,203.88908729652601 95.13864087934249,208.75044641718353 91.24955358281647,204.8613591206575 Z"
      fill="red"
      stroke="green"
      stroke-width="2"
    />
    
  </div>
</body>
`;

exports[`TileDelete renders a curved-tile-enlarged element with default values 1`] = `
<body>
  <div>
    <path
      d="M 13.75,0 A 13.75,13.75 0 0 0 -13.75,0 A 13.75,13.75 0 0 0 13.75,0 Z M 4.440892098500626e-16,3.8890872965260113 L -4.861359120657513,8.750446417183525 -8.750446417183525,4.861359120657515 -3.8890872965260113,4.440892098500626e-16 -8.750446417183525,-4.861359120657513 -4.861359120657515,-8.750446417183525 -4.440892098500626e-16,-3.8890872965260113 4.861359120657513,-8.750446417183525 8.750446417183525,-4.861359120657515 3.8890872965260113,-4.440892098500626e-16 8.750446417183525,4.861359120657513 4.861359120657515,8.750446417183525 Z"
    />
    
  </div>
</body>
`;

exports[`TileDelete renders a curved-tile-enlarged element with the given parameters 1`] = `
<body>
  <div>
    <path
      d="M 113.75,200 A 13.75,13.75 0 0 0 86.25,200 A 13.75,13.75 0 0 0 113.75,200 Z M 96.11091270347399,200 L 91.24955358281647,195.1386408793425 95.13864087934249,191.24955358281647 100,196.11091270347399 104.86135912065751,191.24955358281647 108.75044641718353,195.1386408793425 103.88908729652601,200 108.75044641718353,204.8613591206575 104.86135912065751,208.75044641718353 100,203.88908729652601 95.13864087934249,208.75044641718353 91.24955358281647,204.8613591206575 Z"
      fill="red"
      stroke="green"
      stroke-width="2"
    />
    
  </div>
</body>
`;

exports[`TileDelete renders a straight-tile element with default values 1`] = `
<body>
  <div>
    <path
      d="M 13.75,0 A 13.75,13.75 0 0 0 -13.75,0 A 13.75,13.75 0 0 0 13.75,0 Z M 4.440892098500626e-16,3.8890872965260113 L -4.861359120657513,8.750446417183525 -8.750446417183525,4.861359120657515 -3.8890872965260113,4.440892098500626e-16 -8.750446417183525,-4.861359120657513 -4.861359120657515,-8.750446417183525 -4.440892098500626e-16,-3.8890872965260113 4.861359120657513,-8.750446417183525 8.750446417183525,-4.861359120657515 3.8890872965260113,-4.440892098500626e-16 8.750446417183525,4.861359120657513 4.861359120657515,8.750446417183525 Z"
    />
    
  </div>
</body>
`;

exports[`TileDelete renders a straight-tile element with the given parameters 1`] = `
<body>
  <div>
    <path
      d="M 113.75,200 A 13.75,13.75 0 0 0 86.25,200 A 13.75,13.75 0 0 0 113.75,200 Z M 96.11091270347399,200 L 91.24955358281647,195.1386408793425 95.13864087934249,191.24955358281647 100,196.11091270347399 104.86135912065751,191.24955358281647 108.75044641718353,195.1386408793425 103.88908729652601,200 108.75044641718353,204.8613591206575 104.86135912065751,208.75044641718353 100,203.88908729652601 95.13864087934249,208.75044641718353 91.24955358281647,204.8613591206575 Z"
      fill="red"
      stroke="green"
      stroke-width="2"
    />
    
  </div>
</body>
`;

exports[`TileDelete renders a undefined element with default values 1`] = `
<body>
  <div>
    <path
      d="M 13.75,0 A 13.75,13.75 0 0 0 -13.75,0 A 13.75,13.75 0 0 0 13.75,0 Z M 4.440892098500626e-16,3.8890872965260113 L -4.861359120657513,8.750446417183525 -8.750446417183525,4.861359120657515 -3.8890872965260113,4.440892098500626e-16 -8.750446417183525,-4.861359120657513 -4.861359120657515,-8.750446417183525 -4.440892098500626e-16,-3.8890872965260113 4.861359120657513,-8.750446417183525 8.750446417183525,-4.861359120657515 3.8890872965260113,-4.440892098500626e-16 8.750446417183525,4.861359120657513 4.861359120657515,8.750446417183525 Z"
    />
    
  </div>
</body>
`;

exports[`TileDelete updates when the parameter direction is modified 1`] = `
<body>
  <div>
    <path
      d="M 113.75,200 A 13.75,13.75 0 0 0 86.25,200 A 13.75,13.75 0 0 0 113.75,200 Z M 96.11091270347399,200 L 91.24955358281647,195.1386408793425 95.13864087934249,191.24955358281647 100,196.11091270347399 104.86135912065751,191.24955358281647 108.75044641718353,195.1386408793425 103.88908729652601,200 108.75044641718353,204.8613591206575 104.86135912065751,208.75044641718353 100,203.88908729652601 95.13864087934249,208.75044641718353 91.24955358281647,204.8613591206575 Z"
      fill="red"
      stroke="green"
      stroke-width="2"
    />
    
  </div>
</body>
`;

exports[`TileDelete updates when the parameter fill is modified 1`] = `
<body>
  <div>
    <path
      d="M 113.75,200 A 13.75,13.75 0 0 0 86.25,200 A 13.75,13.75 0 0 0 113.75,200 Z M 96.11091270347399,200 L 91.24955358281647,195.1386408793425 95.13864087934249,191.24955358281647 100,196.11091270347399 104.86135912065751,191.24955358281647 108.75044641718353,195.1386408793425 103.88908729652601,200 108.75044641718353,204.8613591206575 104.86135912065751,208.75044641718353 100,203.88908729652601 95.13864087934249,208.75044641718353 91.24955358281647,204.8613591206575 Z"
      fill="blue"
      stroke="green"
      stroke-width="2"
    />
    
  </div>
</body>
`;

exports[`TileDelete updates when the parameter ratio is modified 1`] = `
<body>
  <div>
    <path
      d="M 113.75,200 A 13.75,13.75 0 0 0 86.25,200 A 13.75,13.75 0 0 0 113.75,200 Z M 96.11091270347399,200 L 91.24955358281647,195.1386408793425 95.13864087934249,191.24955358281647 100,196.11091270347399 104.86135912065751,191.24955358281647 108.75044641718353,195.1386408793425 103.88908729652601,200 108.75044641718353,204.8613591206575 104.86135912065751,208.75044641718353 100,203.88908729652601 95.13864087934249,208.75044641718353 91.24955358281647,204.8613591206575 Z"
      fill="red"
      stroke="green"
      stroke-width="2"
    />
    
  </div>
</body>
`;

exports[`TileDelete updates when the parameter rotation is modified 1`] = `
<body>
  <div>
    <path
      d="M 113.75,200 A 13.75,13.75 0 0 0 86.25,200 A 13.75,13.75 0 0 0 113.75,200 Z M 97.25,202.75 L 90.375,202.75 90.375,197.25 97.25,197.25 97.25,190.375 102.75,190.375 102.75,197.25 109.625,197.25 109.625,202.75 102.75,202.75 102.75,209.625 97.25,209.625 Z"
      fill="red"
      stroke="green"
      stroke-width="2"
    />
    
  </div>
</body>
`;

exports[`TileDelete updates when the parameter stroke is modified 1`] = `
<body>
  <div>
    <path
      d="M 113.75,200 A 13.75,13.75 0 0 0 86.25,200 A 13.75,13.75 0 0 0 113.75,200 Z M 96.11091270347399,200 L 91.24955358281647,195.1386408793425 95.13864087934249,191.24955358281647 100,196.11091270347399 104.86135912065751,191.24955358281647 108.75044641718353,195.1386408793425 103.88908729652601,200 108.75044641718353,204.8613591206575 104.86135912065751,208.75044641718353 100,203.88908729652601 95.13864087934249,208.75044641718353 91.24955358281647,204.8613591206575 Z"
      fill="red"
      stroke="blue"
    />
    
  </div>
</body>
`;

exports[`TileDelete updates when the parameter stroke-width is modified 1`] = `
<body>
  <div>
    <path
      d="M 113.75,200 A 13.75,13.75 0 0 0 86.25,200 A 13.75,13.75 0 0 0 113.75,200 Z M 96.11091270347399,200 L 91.24955358281647,195.1386408793425 95.13864087934249,191.24955358281647 100,196.11091270347399 104.86135912065751,191.24955358281647 108.75044641718353,195.1386408793425 103.88908729652601,200 108.75044641718353,204.8613591206575 104.86135912065751,208.75044641718353 100,203.88908729652601 95.13864087934249,208.75044641718353 91.24955358281647,204.8613591206575 Z"
      fill="red"
      stroke-width="3"
    />
    
  </div>
</body>
`;

exports[`TileDelete updates when the parameter type is modified 1`] = `
<body>
  <div>
    <path
      d="M 113.75,200 A 13.75,13.75 0 0 0 86.25,200 A 13.75,13.75 0 0 0 113.75,200 Z M 96.11091270347399,200 L 91.24955358281647,195.1386408793425 95.13864087934249,191.24955358281647 100,196.11091270347399 104.86135912065751,191.24955358281647 108.75044641718353,195.1386408793425 103.88908729652601,200 108.75044641718353,204.8613591206575 104.86135912065751,208.75044641718353 100,203.88908729652601 95.13864087934249,208.75044641718353 91.24955358281647,204.8613591206575 Z"
      fill="red"
      stroke="green"
      stroke-width="2"
    />
    
  </div>
</body>
`;

exports[`TileDelete updates when the parameter x is modified 1`] = `
<body>
  <div>
    <path
      d="M 53.75,200 A 13.75,13.75 0 0 0 26.25,200 A 13.75,13.75 0 0 0 53.75,200 Z M 36.110912703473986,200 L 31.249553582816475,195.1386408793425 35.13864087934248,191.24955358281647 40,196.11091270347399 44.86135912065751,191.24955358281647 48.750446417183525,195.1386408793425 43.889087296526014,200 48.750446417183525,204.8613591206575 44.86135912065752,208.75044641718353 40,203.88908729652601 35.13864087934249,208.75044641718353 31.249553582816475,204.8613591206575 Z"
      fill="red"
      stroke="green"
      stroke-width="2"
    />
    
  </div>
</body>
`;

exports[`TileDelete updates when the parameter y is modified 1`] = `
<body>
  <div>
    <path
      d="M 113.75,40 A 13.75,13.75 0 0 0 86.25,40 A 13.75,13.75 0 0 0 113.75,40 Z M 96.11091270347399,40 L 91.24955358281647,35.13864087934249 95.13864087934249,31.249553582816475 100,36.110912703473986 104.86135912065751,31.249553582816475 108.75044641718353,35.13864087934248 103.88908729652601,40 108.75044641718353,44.86135912065751 104.86135912065751,48.750446417183525 100,43.889087296526014 95.13864087934249,48.750446417183525 91.24955358281647,44.86135912065752 Z"
      fill="red"
      stroke="green"
      stroke-width="2"
    />
    
  </div>
</body>
`;
